--- a/TODO
+++ b/TODO
@@ -3,4 +3,10 @@ Mort:
     ☐ add navigation bar that automatically moved from left side to bottom in response to screen width
     ☐ implemented amortization calculation
     ☐ screen to display amortization
+    ☐ ability to set monthly extra payments
+    ☐ display top-level metrics with the amortization
+        ☐ month & year of final mortgage payment
+        ☐ total interest paid
+        ☐ money saved compared to default amortization
+        ☐ equivalent APY% of saved interest (to compare to investing that money instead of paying down mortgage)
     ☐ make amort' screen editable - adding/editing ad hoc extra payments in any month 
