--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 Mort:
-    ☐ replace demo page with form fields for creating a mortgage @1h
+    ✔ replace demo page with form fields for creating a mortgage @1h @done(23-03-10 10:04)
+    ✔ implement monthly payment calculation @30m @done(23-03-10 10:05)
+    ☐ implement amortization calculation @1h
     ☐ add navigation bar that automatically moved from left side to bottom in response to screen width @30m
-    ☐ implemented amortization calculation @1h
     ☐ screen to display amortization @3h
     ☐ ability to set monthly recurring extra payments (new form field and new param for BE calc) @30m @high
     ☐ display top-level metrics with the amortization (new funcs to calc these, new widgets to show them) 
