--- a/TODO
+++ b/TODO
@@ -2,14 +2,18 @@ Mort:
     ✔ replace demo page with form fields for creating a mortgage @1h @done(23-03-10 10:04)
     ✔ implement monthly payment calculation @30m @done(23-03-10 10:05)
     ✔ implement amortization calculation @1h @done(23-03-11 19:43)
-    ☐ add navigation bar that automatically moved from left side to bottom in response to screen width @30m
+    ☐ remove amortization from display @15m
+    ☐ implement append-only list of Mortgage models; append a new one each time the submit button is tapped @45m
+    ☐ implement display of the AOL of Mortgages, eg like the demo word-pairing app @1h
+    ☐ implement color-coded comparison btwn the Mortgages in the AOL
     ☐ screen to display amortization @3h @started(23-03-11 19:43)
     ☐ ability to set monthly recurring extra payments (new form field and new param for BE calc) @1h @high
     ☐ ability to set one-time extra payments within any Period (month) @2h
+        ☐ make amort' screen editable - adding/editing ad hoc extra payments in any month @3h @low 
     ☐ display top-level metrics with the amortization (new funcs to calc these, new widgets to show them) 
         ☐ month & year of final mortgage payment @1h
         ✔ total interest paid @1h @done(23-03-12 11:17)
         ☐ money saved compared to default amortization @1h
         ☐ equivalent APY% of saved interest (to compare to investing that money instead of paying down mortgage) @3h
             this will need an input to provide any $cost incurred to obtain the new mortgage params, eg closing costs on a refi or points 
-    ☐ make amort' screen editable - adding/editing ad hoc extra payments in any month @3h @low
+    ☐ add navigation bar that automatically moved from left side to bottom in response to screen width @30m
