--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@ Mort:
     ☐ display top-level metrics with the amortization (new funcs to calc these, new widgets to show them) 
         ☐ month & year of final mortgage payment @1h
         ✔ total interest paid @1h @done(23-03-12 11:17)
+        ☐ interest paid in first n years (hardcode n = 5, later make it editable) @1h
         ☐ money saved compared to default amortization @1h
         ☐ equivalent APY% of saved interest (to compare to investing that money instead of paying down mortgage) @3h
             this will need an input to provide any $cost incurred to obtain the new mortgage params, eg closing costs on a refi or points 
