--- a/TODO
+++ b/TODO
@@ -2,13 +2,13 @@ Mort:
     ✔ replace demo page with form fields for creating a mortgage @1h @done(23-03-10 10:04)
     ✔ implement monthly payment calculation @30m @done(23-03-10 10:05)
     ✔ implement amortization calculation @1h @done(23-03-11 19:43)
-    ☐ remove amortization from display @15m
-    ☐ implement append-only list of Mortgage models; append a new one each time the submit button is tapped @45m
-    ☐ implement display of the AOL of Mortgages, eg like the demo word-pairing app @1h
-        ☐ make each Mortgage card clickable, goto new page that displays the full amortization table @1h
+    ✔ remove amortization from display @15m @done(23-03-14 23:13)
+    ✔ implement append-only list of Mortgage models; append a new one each time the submit button is tapped @45m @done(23-03-14 23:14)
+    ✔ implement display of the AOL of Mortgages, eg like the demo word-pairing app @1h @done(23-03-14 23:14)
+    ☐ make each Mortgage card clickable, goto new page that displays the full amortization table @1h
         This new page should also display the parameters of the Mortgage (uneditable)
     ☐ implement color-coded comparison btwn the Mortgages in the AOL
-    ☐ screen to display amortization @3h @started(23-03-11 19:43)
+    ☐ screen to display amortization @3h 
     ☐ ability to set monthly recurring extra payments (new form field and new param for BE calc) @1h @high
     ☐ ability to set one-time extra payments within any Period (month) @2h
         ☐ make amort' screen editable - adding/editing ad hoc extra payments in any month @3h @low 
